--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,7 +2,7 @@
 parameters:
     database_driver: pdo_mysql
     database_host: 143.93.91.63
-    database_port: null
+    database_port: 3306
     database_name: symfony
     database_user: root
     database_password: abc123
