--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,8 +4,8 @@ parameters:
     database_host: 143.93.91.63
     database_port: 3306
     database_name: symfony
-    database_user: root
-    database_password: abc123
+    database_user: testuser
+    database_password: test123
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
