--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,11 +8,11 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        users:
+            entity:
+                class:        FHBingenMHBBundle:User
+                property:     username
+                manager_name: default #braucht man das? ist das richtig?
 
     firewalls:
         dev:
