/app_dev.php/demo/secured/login
Fehler:
The Doctrine repository "Doctrine\ORM\EntityRepository" must implement UserProviderInterface.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,10 +9,7 @@ security:
 
     providers:
         administrators:
-            entity:
-                class:        FHBingenMHBBundle:User
-                #property:     username
-                #manager_name: default #braucht man das? ist das richtig?
+            entity: { class: FHBingenMHBBundle:User }
 
     firewalls:
         dev:
