--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,8 @@
 security:
     encoders:
-        #Symfony\Component\Security\Core\User\User: plaintext
-        FHBingen\Bundle\MHBBundle\Entity\User : bcrypt
+        blubb:
+            algorithm: bcrypt
+            cost:      12
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
