--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,30 +17,30 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        demo_login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
-        demo_secured_area:
-            pattern:    ^/demo/secured/
+#        demo_login:
+#            pattern:  ^/demo/secured/login$
+#            security: false
+#
+#        demo_secured_area:
+#            pattern:    ^/demo/secured/
+#            form_login:
+#                check_path: _demo_security_check
+#                login_path: _demo_login
+#            logout:
+#                path:   _demo_logout
+#                target: _demo
+        login_firewall:
+            pattern:   ^/sec/login$
+            anonymous: ~
+        secured_area:
+            #pattern:    ^/
+            pattern: ^/sec/restricted/
             form_login:
-                check_path: _demo_security_check
-                login_path: _demo_login
+                login_path: /sec/login
+                check_path: /sec/restricted/login_check
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
-
-        sec:
-            pattern: ^/sec/restricted
-            form_login:
-                check_path: _security_check
-                login_path: _login
-            logout:
-                path:   _logout
-                target: _index
+                path:   /sec/restricted/logout
+                target: /sec/
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
