UtilController erstellt und Rollen angepasst

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,7 @@ security:
             cost:      12
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_SGL: [ROLE_DOZENT]
 
     providers:
         users:
