--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,8 +28,12 @@ security:
 #            logout:
 #                path:   _demo_logout
 #                target: _demo
+
         login_firewall:
             pattern:   ^/sec/login$
+            anonymous: ~
+        form_firewall:
+            pattern:   ^/creation/
             anonymous: ~
         secured_area:
             pattern:    ^/
