Betriebssystem-Check bei PDF-Erstellung (hoffentlich keine Code-Änderung mehr nötig bei Aufspielen auf VM)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,9 +76,9 @@ swiftmailer:
 knp_snappy:
     pdf:
         enabled:    true
-        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
-        options:    []
+#        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
+#        options:    []
     image:
-        enabled:    true
-        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
-        options:    []
+        enabled:    false
+#        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
+#        options:    []
