--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,8 +77,8 @@ knp_snappy:
     pdf:
         enabled:    true
 #        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
-        binary:     /home/proj/symfony/vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
-        options:    []
+#        binary:     /home/proj/symfony/vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
+#        options:    []
     image:
         enabled:    false
 #        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
